Refactor media controllers and API artwork handling
Introduce explicit constructor injection and logging across media controllers and services, improve error handling, and add artwork support for games.

Changes include:
- Add getArtwork with retry logic to GamesAndVNsApiImpl to fetch cover/banner via API.
- Adjust TvSeriesApiImpl to request images without language and add error logging.
- Major refactor of GenericMediaDataControllerImpl: replace Lombok constructors with explicit @Autowired constructor, make service fields final, add @Slf4j, improve null/exception handling and logging, replace Arrays.asList with List.of, and use noneMatch for stream checks.
- Update MovieControllerImpl and SerieControllerImpl to use explicit constructors and call super(...) to pass dependencies to the base controller.
- Repository change: add findAllByMedia to ExternalReferenceRepository and update ExternalReferenceServiceImpl to use it instead of Example-based lookup.
- MediaServiceImpl: remove Lombok constructor and add explicit constructor (with @Lazy where appropriate) for wiring.

These changes focus on safer dependency wiring, clearer logging, more robust API calls, and cleaner collection handling.